Fixes for logo colors issues and overflow on FAQ page

--- a/assets/css/pages/faq.css
+++ b/assets/css/pages/faq.css
@@ -39,10 +39,10 @@ body {
 }
 
 .planet-gradient {
-  left: auto;
-  right: 0;
+  left: 0;
   width: 60vw;
   height: 50vw;
+  opacity: .5;
 }
 
 .faqs {
@@ -130,7 +130,6 @@ body {
   grid-template-columns: 1fr 1fr;
   align-items: center;
   position: relative;
-  margin-bottom: 150px;
 }
 
 #nous-contacter .planet-gradient {
@@ -147,6 +146,9 @@ iframe {
 }
 
 @media (max-width:768px){
+  .planet-gradient {
+    opacity:1;
+  }
   .header {
     text-align: left;
   }
